Remove rspecs and test template via circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,12 +20,6 @@ jobs:
           name: Bundle install
           command: bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --jobs=4 --retry=3
 
-      - run:
-          name: Download CodeClimate cc-test-reporter and make it executable
-          command: |
-            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-            chmod u+x cc-test-reporter
-
       - save_cache:
           key: rails-templates-dependencies-{{ checksum "Gemfile.lock" }}
           paths:
@@ -35,9 +29,6 @@ jobs:
   test:
     docker:
       - image: circleci/ruby:2.6.5
-        environment:
-          COVERAGE: true
-          CC_TEST_REPORTER_ID: a9e592c192db6b7d44346b87a89d99653af4359c4f2d44901bba6fa859be0b92
 
     working_directory: ~/repo
 
@@ -52,20 +43,24 @@ jobs:
           command: bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --jobs=4 --retry=3
 
       - run:
-          name: Report before build to CodeClimate
-          command: ./cc-test-reporter before-build
-
-      - type: shell
-        command: |
-          bundle exec rspec --profile 10 \
-                            --format RspecJunitFormatter \
-                            --out test_results/rspec.xml \
-                            --format Fuubar \
-                            $(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)
+          name: Install rails
+          command: gem install rails
 
       - run:
-          name: Report after build to CodeClimate
-          command: ./cc-test-reporter after-build --coverage-input-type simplecov --exit-code $?
+          name: Create new rails app using the template
+          command: |
+            rails new ../rails-new-app --template=template.rb \
+                                       --skip-action-mailer \
+                                       --skip-action-mailbox \
+                                       --skip-action-text \
+                                       --skip-active-storage \
+                                       --skip-action-cable \
+                                       --skip-sprockets \
+                                       --skip-spring \
+                                       --skip-bootsnap \
+                                       --skip-test \
+                                       --no-rc \
+                                       --api
 
 workflows:
   version: 2
