--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,28 +4,6 @@
 #
 version: 2
 jobs:
-  build:
-    docker:
-      - image: circleci/ruby:2.6.5
-    working_directory: ~/repo
-
-    steps:
-      - checkout
-
-      - restore_cache:
-          keys:
-            - rails-templates-dependencies-{{ checksum "Gemfile.lock" }}
-
-      - run:
-          name: Bundle install
-          command: bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --jobs=4 --retry=3
-
-      - save_cache:
-          key: rails-templates-dependencies-{{ checksum "Gemfile.lock" }}
-          paths:
-            - vendor/bundle
-            - cc-test-reporter
-
   test:
     docker:
       - image: circleci/ruby:2.6.5
@@ -34,13 +12,6 @@ jobs:
 
     steps:
       - checkout
-
-      - restore_cache:
-          key: rails-templates-dependencies-{{ checksum "Gemfile.lock" }}
-
-      - run:
-          name: Bundle install
-          command: bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --jobs=4 --retry=3
 
       - run:
           name: Install rails
@@ -64,9 +35,6 @@ jobs:
 
 workflows:
   version: 2
-  build_and_test:
+  test:
     jobs:
-      - build
-      - test:
-          requires:
-            - build
+      - test      
